--- a/diana/EQUIZ.html
+++ b/diana/EQUIZ.html
@@ -54,7 +54,7 @@
         <div style="font-size: 0.85em; color: #666;">今日任务已达成！错题已用红色标出。</div>
     </div>
 
-    <h1>首字母填空每日练习</h1>
+    <h1>DIANA的首字母填空每日练习</h1>
     <div class="subtitle" id="date-display"></div>
     
     <div id="quiz-container"></div>
