--- a/diana/WDQUIZ.html
+++ b/diana/WDQUIZ.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>每日五词 - 精简一行版</title>
+    <title>每日五词 QUIZ</title>
     <script src="WDDATA.js"></script>
     <style>
         :root { --primary: #2c3e50; --accent: #3498db; --bg: #f8f9fa; --correct: #27ae60; --wrong: #e74c3c; }
