--- a/david/math.html
+++ b/david/math.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>数学练习题</title>
+    <title>李和同学的数学练习题
     <style>
         body {
             font-family: 'Arial', sans-serif;
